fixed scrollbars appearing for podiums. Fixes #281

--- a/css/roundResults.import.less
+++ b/css/roundResults.import.less
@@ -28,7 +28,14 @@
   }
 }
 
+.table-responsive {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
 table.table-results {
+  overflow: hidden !important;
+
   td:nth-child(2),
   th:nth-child(2) {
     max-width: 250px;
